added fight section

--- a/rock-paper-scissors-master/rock-paper-scissors-master/style.css
+++ b/rock-paper-scissors-master/rock-paper-scissors-master/style.css
@@ -4,6 +4,9 @@
 --textColor: hsl(229, 25%, 31%);
 --scoreColor: hsl(229, 64%, 46%);
 --borderColor: hsl(217, 16%, 45%);
+--scissorsGradient: hsl(39, 89%, 49%), hsl(40, 84%, 53%);
+--paperGradient: hsl(230, 89%, 62%), hsl(230, 89%, 65%);
+--rockGradient: hsl(349, 71%, 52%), hsl(349, 70%, 56%);
 }
 
 *{
@@ -59,7 +62,7 @@ main{
     margin: 0 auto;
     position: relative;
     padding-top: 150px;
-
+}
 section {
     position: absolute;
     top: 50%;
@@ -67,7 +70,7 @@ section {
     transform: translate(-50%, -50%);
 }
 
-}
+
 .game {
   aspect-ratio: 313 / 278;
     background-image: url("./images/bg-triangle.svg");
@@ -82,27 +85,118 @@ section {
     height: 80%;
     aspect-ratio: 1/1;
     border-radius: 50%;
-    border: 20px solid ;
+    border: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-shadow: inset 0px -10px 0px rgba(0, 0, 0, 0.5);
 }
 
 .paperbtn{
+        background: linear-gradient(var(--paperGradient));
+
+}
+
+.scissorsbtn{
+    background: linear-gradient(var(--scissorsGradient));
+}
+
+.rockbtn{
+    background: linear-gradient(var(--rockGradient));
+}
+
+
+
+.game .paperbtn{
     left: 0;
     top: 0;
     transform: translate(-50%, -50%);
 
 }
 
-.scissorsbtn{
+.game .scissorsbtn{
     right: 0;
     top: 0;
     transform: translate(50%, -50%);
 }
 
-.rockbtn{
+.game .rockbtn{
     bottom: 0;
     left: 50%;
     transform: translate(-50%, 50%);
 }
+
+.btnimg {
+    background-color: white;
+    height: 80%;
+    aspect-ratio: 1/1;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-shadow: inset 0px 10px 0px rgba(0, 0, 0, 0.5);
+}
+
+.game img {
+    width: 50%;
+}
+
+.fight {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  max-width: 600px;
+  margin: 0 auto;
+  padding: 0 auto;
+  color: white;
+  margin-top: -150px;
+}
+
+.picked {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 30px;
+  flex: 1;
+  text-align: center;
+  justify-content: center;
+  padding: 0 auto;
+  width: 50%;
+}
+
+
+.fight button {
+  width: 80%;
+  aspect-ratio: 1/1;
+  border-radius: 50%;
+  border: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-shadow: 0px 10px 0px rgba(0, 0, 0, 0.2);
+}
+
+
+.picked span{
+    display: block;
+    width: 100%;
+    text-align: center;
+    font-size: 14px;
+    letter-spacing: 1px;
+}
+
+.placeholder {
+  width: 75%;
+  aspect-ratio: 1/1;
+  border-radius: 50%;
+  background: rgba(0, 0, 0, 0.3);
+}
+
+
+
+
+
+
 
 .rules{
    position: fixed;
@@ -119,6 +213,22 @@ section {
     padding: 10px 30px;
     letter-spacing: 2px;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
